[project]
name = "repl-nix-baltimoregolfguide"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.18.0",
    "openai>=1.53.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "streamlit-folium>=0.23.1",
    "streamlit>=1.39.0",
    "trafilatura>=1.12.2",
]
